# python-project-50

./: Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: pyci.yml  test_coverage.yml
gendiff/: __init__.py  diff.py  generate_diff.py  stylish.py
gendiff/formatting_functions/: json.py  plain.py  stylish.py
gendiff/scripts/: cli.py  gendiff.py  parsing.py
tests/: test_generate_diff.py  test_get_file_data.py  test_json.py  test_plain.py
tests/fixtures/: expected_json.json  file1.yml  file2.yml
