[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["tpl-86 <tron-050686@mail.ru>"]
readme = "README.md"
packages = [
{ include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
